syntax = "proto3";


option go_package = "./email_proto";


message EmailData {
    string to = 1;
    string subject= 2;
    string message= 3;
}

message EmailRequest {
    EmailData data = 1;
}

message EmailResponse {
    string message = 1;
    bool error = 2;
}

service EmailService {
    rpc SendEmail( EmailRequest) returns (EmailResponse);
}