syntax = "proto3";

package email_proto;

option go_package = "./proto";


message